Reputation as part of topology
