# directory/docs/swagger.json
@@ -601,6 +601,78 @@
                 }
             }
         },
+        "models.RegisteredGateway": {
+            "type": "object",
+            "required": [
+                "clientsHost",
+                "identityKey",
+                "mixHost",
+                "sphinxKey",
+                "version"
+            ],
+            "properties": {
+                "clientsHost": {
+                    "type": "string"
+                },
+                "identityKey": {
+                    "type": "string"
+                },
+                "location": {
+                    "type": "string"
+                },
+                "mixHost": {
+                    "type": "string"
+                },
+                "registrationTime": {
+                    "type": "integer"
+                },
+                "reputation": {
+                    "type": "integer"
+                },
+                "sphinxKey": {
+                    "type": "string"
+                },
+                "version": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.RegisteredMix": {
+            "type": "object",
+            "required": [
+                "identityKey",
+                "layer",
+                "mixHost",
+                "sphinxKey",
+                "version"
+            ],
+            "properties": {
+                "identityKey": {
+                    "type": "string"
+                },
+                "layer": {
+                    "type": "integer"
+                },
+                "location": {
+                    "type": "string"
+                },
+                "mixHost": {
+                    "type": "string"
+                },
+                "registrationTime": {
+                    "type": "integer"
+                },
+                "reputation": {
+                    "type": "integer"
+                },
+                "sphinxKey": {
+                    "type": "string"
+                },
+                "version": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Topology": {
             "type": "object",
             "required": [
@@ -611,13 +683,13 @@
                 "gateways": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.GatewayRegistrationInfo"
+                        "$ref": "#/definitions/models.RegisteredGateway"
                     }
                 },
                 "mixNodes": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.MixRegistrationInfo"
+                        "$ref": "#/definitions/models.RegisteredMix"
                     }
                 }
             }
